<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">


		<TextView android:text="@string/list_locationname"
			android:id="@+id/addloc_plainName" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<EditText android:layout_height="wrap_content" android:id="@+id/addloc_locName"
			android:layout_width="fill_parent" android:text="" />

		<TextView android:text="@string/list_locationarrivaltime"
			android:id="@+id/addloc_arrivalTime" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<DatePicker android:layout_height="wrap_content"
			android:id="@+id/addloc_editArrivalTime" android:layout_width="wrap_content" />

		<TextView android:text="@string/addloc_stayOvernight"
			android:id="@+id/addloc_stayOvernightText" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/addloc_stayOvernight"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<ListView android:id="@+id/android:list"
			android:layout_width="fill_parent" android:layout_height="match_parent"
			android:layout_weight="1.0">
		</ListView>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/ButtonAdd"
				android:onClick="onAddLocationButtonClicked" android:text="@string/persist" />
			<Button android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/ButtonCancel"
				android:onClick="onCancelButtonClicked" android:text="@string/cancel" />

		</LinearLayout>

	</LinearLayout>
</ScrollView>